--- a/latex/ch3.tex
+++ b/latex/ch3.tex
@@ -149,7 +149,7 @@ In this section, I will discuss why I would like to add new frequency scales to 
 
 The frequency scale is the most important parameter of the NSGT and sliCQT. It defines the nonuniform frequency bands for audio analysis desired by the user. The choice of frequency scale affects the spectral representation of the music signal. The hypothesis of this thesis is that a spectrogram generated from a musical or auditory frequency scale may improve the results of the downstream music demixing system compared to the STFT, which suffers from the time-frequency tradeoff described in Section \ref{sec:jointtfa}.
 
-\hl{I want to remark on the omission of the octave scale from this section}, which is the only scale for the sliCQT shown in the paper \parencite{slicq}. It is also the default scale in the various open-source implementations of the NSGT.\footnote{\url{https://github.com/grrrr/nsgt}, \url{https://www.mathworks.com/help/wavelet/ref/cqt.html}, \url{http://ltfat.org/doc/filterbank/cqt_code.html}} The octave scale is like the Constant-Q (logarithmic in base two) scale, except that the bins parameter is interpreted as bins-per-octave, and the total frequency bins is computed from equation \eqref{equation:bpo} shown in Section \ref{sec:cqt}. This is discussed in Appendix \ref{appendix:octscale}. In xumx-sliCQ, I want the bins parameter to control the number of output frequency bins of the sliCQT directly, without the bins-per-octave calculation in between.
+\hl{I want to remark on the omission of the octave scale from this section}, which is the only scale for the sliCQT shown in the paper \parencite{slicq}. It is also the default scale in the various open-source implementations of the NSGT.\footnote{\url{https://github.com/grrrr/nsgt}, \url{https://www.mathworks.com/help/wavelet/ref/cqt.html}, \url{http://ltfat.org/doc/filterbank/cqt_code.html}} The octave scale is like the Constant-Q scale (logarithmic in base two), except that the bins parameter is interpreted as bins-per-octave, and the total frequency bins is computed from equation \eqref{equation:bpo} shown in Section \ref{sec:cqt}. This is discussed in Appendix \ref{appendix:octscale}. In xumx-sliCQ, I want the bins parameter to control the number of output frequency bins of the sliCQT directly, without the bins-per-octave calculation in between.
 
 Section \ref{sec:theorynsgt} showed examples of NSGT spectrograms with the Constant-Q (logarithmic in base two) and mel scales, in Figures \ref{fig:bunchansgts1} and \ref{fig:bunchansgts2}. These are the scales provided in the reference NSGT/sliCQT library. In Section \ref{sec:fscales}, I discussed that the Variable-Q scale for music and Bark psychoacoustic scale are both of interest in music or auditory applications. For this reason, I chose to implement the Variable-Q and Bark scales to supplement the Constant-Q and mel scales.
 
@@ -223,7 +223,7 @@ The random search parameters are shown in Table \ref{table:slicqparams}. Note th
 	[o]ften the extent of a search is determined by a computational budget, and with random search 64 trials are enough to find better models in a larger less promising space \parencite[293]{randomgrid}
 \end{quote}
 
-\hl{Since the sliCQT parameters are hyperparameters} of the xumx-sliCQ neural network, I decided from the above that using at least 64 iterations of a random search would yield a good enough result. I ran two instances of the script with 60 iterations each, resulting in 120 total iterations of the random parameter search for each of the four frequency scales. Each instance of the script used a different random seed (42 and 1337) (the role of fixing the seed of Python's random number generator (RNG) is discussed in Section \ref{sec:pyrng}.
+\hl{Since the sliCQT parameters are hyperparameters} of the xumx-sliCQ neural network, I decided from the above that using at least 64 iterations of a random search would yield a good enough result. I ran two instances of the script with 60 iterations each, resulting in 120 total iterations of the random parameter search for each of the four frequency scales. Each instance of the script used a different random seed (42 and 1337). The purpose of fixing the seed of Python's random number generator (RNG) is discussed in Section \ref{sec:pyrng}.
 
 Recall from Section \ref{sec:evalbss} that the Signal-to-Distortion (SDR) is one of the scores of the BSS metrics, with a units of decibels (dB), which is commonly used as a single metric that summarizes the global performance of a music demixing system. The selected sliCQT frequency scale parameters were evaluated by computing the mix-phase waveforms, which were described in Section \ref{sec:noisyphaseoracle}. The phase of the complex sliCQT of the mixed song and the magnitude of the complex sliCQT of the ground-truth source signal for all four sources (drums, bass, vocals, other) were combined to create the MPI (mix-phase inversion) waveforms. The median SDR was computed across the four sources and 14 validation tracks of MUSDB18-HQ, and the sliCQT parameters that resulted in the MPI waveforms with the highest SDR were selected as the final sliCQT parameters to use in the neural network.
 
