--- a/latex/report.tex
+++ b/latex/report.tex
@@ -111,8 +111,8 @@
 
 \newpagefill
 
-\subfile{ch0.tex}
-\newpagefill
+%\subfile{ch0.tex}
+%\newpagefill
 
 \tableofcontents
 
@@ -126,27 +126,27 @@
 
 \newpagefill
 
-\subfile{ch1.tex}
-\newpagefill
+%\subfile{ch1.tex}
+%\newpagefill
 
 \subfile{ch2.tex}
 \newpagefill
 
 %\setcounter{section}{2}
-\subfile{ch3.tex}
-\newpagefill
+%\subfile{ch3.tex}
+%\newpagefill
 
-\subfile{ch4.tex}
-\newpagefill
+%\subfile{ch4.tex}
+%\newpagefill
 
-\subfile{ch5.tex}
-\newpagefill
+%\subfile{ch5.tex}
+%\newpagefill
 
 \section{References}
 \printbibliography[heading=none]
 \newpagefill
 
-\subfile{ch6.tex}
-\newpagefill
+%\subfile{ch6.tex}
+%\newpagefill
 
 \end{document}
