Describe different colors of ragged tf transform

--- a/latex/ch2.tex
+++ b/latex/ch2.tex
@@ -519,7 +519,7 @@ This same statement also applies to the NSGT, where different frequency bins hav
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.9\textwidth]{./images-misc/slicq_shape.png}
-	\caption{Illustration of the ragged NSGT, where frequency bins are grouped by their time resolution}
+	\caption{Illustration of the ragged NSGT, where frequency bins are grouped by their time resolution. The green-colored matrix represents the frequency bins analyzed with the highest frequency resolution and lowest time resolution, resulting in frequencies spaced close together and the lowest number of temporal frames. Moving upwards, the yellow, pink, and blue matrices have a decreasing frequency resolution and increasing time resolution, resulting in an increasing spacing between frequencies and an increasing number of temporal frames.}
 	\label{fig:raggedslicqt}
 \end{figure}
 
