--- a/latex/ch3.tex
+++ b/latex/ch3.tex
@@ -73,7 +73,7 @@ Figure \ref{fig:raggedslicqtoverlapadd} shows the procedure of overlap-adding ra
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=\textwidth]{./images-blockdiagrams/overlapprocess.png}
-	\caption{Overlap-adding adjacent ragged slices of the sliCQT to produce the final ragged output. The red rectangle shows the overlap between slice 1 and 2, and the blue rectangle shows the overlap between slice 2 and 3.}
+	\caption{Overlap-adding adjacent ragged slices of the sliCQT to produce the final ragged output. The green-colored matrix represents the frequency bins analyzed with the first time-frequency resolution, and the pink-colored matrix represents the frequency bins analyzed with the second time-frequency resolution. The red rectangle shows the overlap between slice 1 and 2, and the blue rectangle shows the overlap between slice 2 and 3.}
 	\label{fig:raggedslicqtoverlapadd}
 \end{figure}
 
@@ -86,8 +86,8 @@ After overlap-adding the sliCQT, the result is a ragged matrix representing a no
 
 \begin{figure}[ht]
 	\centering
-	\subfloat[STFT, a uniform time-frequency transform]{\includegraphics[width=0.5\textwidth]{./images-blockdiagrams/stftslicqtcmp1.png}}\\
-	\subfloat[A nonuniform time-frequency transform]{\includegraphics[width=0.65\textwidth]{./images-blockdiagrams/stftslicqtcmp2.png}}
+	\subfloat[STFT, a uniform time-frequency transform. The entire matrix is colored yellow, since every frequency bin is analyzed with the same (i.e., uniform) time-frequency resolution.]{\includegraphics[width=0.5\textwidth]{./images-blockdiagrams/stftslicqtcmp1.png}}\\
+	\subfloat[A nonuniform time-frequency transform. The green, yellow, pink, and blue matrices represent the four different time-frequency resolutions used to analyze the different groupings of frequency bins.]{\includegraphics[width=0.65\textwidth]{./images-blockdiagrams/stftslicqtcmp2.png}}
 	\caption{The uniform STFT compared to a ragged nonuniform transform like the NSGT}
 	\label{fig:contraststftslicqt}
 \end{figure}
@@ -106,7 +106,7 @@ As described in the previous section, the sliCQT returns 2D time-frequency matri
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=\textwidth]{./images-blockdiagrams/3dslicqola2d.png}
-	\caption{Overlap-adding the list of 3D tensors to create a list of 2D tensors in the sliCQT}
+	\caption{Overlap-adding the list of 3D tensors to create a list of 2D tensors in the sliCQT. The green-colored matrices represent the first time-frequency resolution, and the pink-colored matrices represent the second time-frequency resolution in the ragged list.}
 	\label{fig:3dslicqola2d}
 \end{figure}
 
@@ -115,7 +115,7 @@ The final data structure for the sliCQT in PyTorch is a list of 3D tensors. Each
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.75\textwidth]{./images-blockdiagrams/2dslicqolastft.png}
-	\caption{Ragged list of 2D tensors representing the overlap-added sliCQT spectrogram, compared to the single 2D tensor representing the STFT spectrogram}
+	\caption{Ragged list of 2D tensors representing the overlap-added sliCQT spectrogram, compared to the single 2D tensor representing the STFT spectrogram. The sliCQT contains two colors, green and pink, representing two different time-frequency resolutions for different groups of frequency bins. The STFT contains a single color, yellow, representing the uniform time-frequency resolution used for all the frequency bins.}
 	\label{fig:2dslicqolastft}
 \end{figure}
 
@@ -261,7 +261,7 @@ First, the list of 3D tensors of the sliCQT must always be overlap-added to tran
 \subsubsection{Neural network architectures}
 \label{sec:slicqarches}
 
-In this section, a choice of Bi-LSTM and CDAE architectures for the ragged sliCQT in xumx-sliCQ will be presented. I copied the Bi-LSTM code from the original model,\footnote{\url{https://github.com/sigsep/open-unmix-pytorch/blob/master/openunmix/model.py\#L43}} making adaptations as necessary to support the sliCQT instead of the STFT. I implemented the CDAE code from scratch, by implementing the CDAE architectures described in \textcite{plumbley1} and \textcite{plumbley2} using the convolutional layers provided by PyTorch.
+In this section, a choice of Bi-LSTM and CDAE architectures for the ragged sliCQT in xumx-sliCQ will be presented. I copied the Bi-LSTM code from the original model,\footnote{\url{https://github.com/sigsep/open-unmix-pytorch/blob/master/openunmix/model.py\#L43}} making adaptations as necessary to support the sliCQT instead of the STFT. I implemented the CDAE code from the ground up, by implementing the CDAE architectures described in \textcite{plumbley1} and \textcite{plumbley2} using the convolutional layers provided by PyTorch.
 
 Figure \ref{fig:cdaeslicqt} shows how both the Bi-LSTM and CDAE network architectures should be applied to the ragged sliCQT. Instead of having a single neural network operate on the single matrix of the STFT, which includes all of the frequency bins at the same temporal frame rate, there must be a neural network that operates on each of the sub-matrices of the ragged sliCQT.
 
@@ -270,7 +270,7 @@ Note that both the Bi-LSTM and CDAE architectures use the 2D overlap-added sliCQ
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=\textwidth]{./images-blockdiagrams/xumx_slicq_pertarget_cdae_bilstm.png}
-	\caption{Block diagram of the individual CNNs of xumx-sliCQ, using a simplified ragged sliCQT for demonstration purposes}
+	\caption{Block diagram of the individual CNNs of xumx-sliCQ, using a simplified ragged sliCQT for demonstration purposes. The green-colored matrix represents the first time-frequency (TF) resolution and the pink-colored matrix represents the second time-frequency resolution in the ragged transform.}
 	\label{fig:cdaeslicqt}
 \end{figure}
 
@@ -293,7 +293,7 @@ Using the values from \textcite{plumbley2}, the two layers of convolution in the
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=\textwidth]{./images-blockdiagrams/xumx_slicq_cdae.png}
-	\caption{Symmetric encoder/decoder architecture of the xumx-sliCQ CDAE}
+	\caption{Symmetric encoder/decoder architecture of the xumx-sliCQ CDAE. The green-colored matrices represent the first time-frequency (TF) resolution and the pink-colored matrices represent the second time-frequency resolution of the ragged sliCQT.}
 	\label{fig:newcdaefig}
 \end{figure}
 
