Improve mila presentation

--- a/latex/citations_presentation.bib
+++ b/latex/citations_presentation.bib
@@ -55,7 +55,7 @@ pages = {1481--1496},
 title = {Theory, implementation and applications of nonstationary Gabor frames},
 volume = {236},
 number = {6},
-%journal = {Journal of Computational and Applied Mathematics},
+journal = {Journal of Computational and Applied Mathematics},
 doi = {10.1016/j.cam.2011.09.011},
 %url = {https://ltfat.github.io/notes/ltfatnote018.pdf}
 }
@@ -149,7 +149,7 @@ title = {Musical source separation: An introduction},
 volume = {36},
 number = {1},
 pages = {31--40},
-%journal = {IEEE Signal Processing Magazine},
+journal = {IEEE Signal Processing Magazine},
 doi = {10.1109/MSP.2018.2874719}
 }
 
@@ -177,7 +177,7 @@ doi={10.1109/JPROC.1996.503148}
 @article{jbrown,
   title={Calculation of a constant Q spectral transform},
   author={Judith Brown},
-  %journal={Journal of the Acoustical Society of America},
+  journal={Journal of the Acoustical Society of America},
   year={1991},
   volume={89},
   number={1},
@@ -308,7 +308,7 @@ author = {D{\"o}rfler, Monika},
 year = {2002},
 title = {Gabor analysis for a class of signals called music},
 url = {http://www.mathe.tu-freiberg.de/files/thesis/gamu_1.pdf},
-%school = {Numerical Harmonic Analysis Group, University of Vienna},
+school = {Numerical Harmonic Analysis Group, University of Vienna},
 }
 
 @inproceedings{driedger,
@@ -391,7 +391,7 @@ title = {Single channel vocal separation using median filtering and factorisatio
 volume = {4},
 number = {1},
 pages={62--73},
-%journal = {ISAST Transactions on Electronic and Signal Processing}
+journal = {ISAST Transactions on Electronic and Signal Processing}
 }
 
 @article{floss,
@@ -579,7 +579,7 @@ doi = {10.1162/neco.1997.9.8.1735}
 
 @article{slicq,
 author={Holighaus, Nicki and Dörfler, Monika and Velasco, Gino Angelo and Grill, Thomas},
-%journal={IEEE Transactions on Audio, Speech, and Language Processing},
+journal={IEEE Transactions on Audio, Speech, and Language Processing},
 title={A framework for invertible, real-time constant-Q transforms},
 year={2013},
 volume={21},
@@ -705,7 +705,7 @@ doi = {10.1007/978-981-15-9712-1_31}
   booktitle = {2019 {IEEE} Workshop on Applications of Signal Processing to Audio
                and Acoustics},
   pages     = {175--179},
-  %publisher = {{IEEE}},
+  publisher = {{IEEE}},
   year      = {2019},
   doi       = {10.1109/WASPAA.2019.8937253},
 }
@@ -845,7 +845,7 @@ journal = {Proceedings of the 28th International Conference on Machine Learning 
 @inproceedings{musicmask,
 author = {Liu, Ruolun and Li, Suping},
 year = {2009},
-%title = {A review on music source separation},
+title = {A review on music source separation},
 booktitle = {IEEE Youth Conference on Information, Computing and Telecommunication},
 pages = {343--346},
 doi = {10.1109/YCICT.2009.5382353}
@@ -1291,7 +1291,7 @@ edition = {1st},
 
 @article{musicsepintro1,
   author={Rafii, Zafar and Liutkus, Antoine and Stöter, Fabian-Robert and Mimilakis, Stylianos Ioannis and FitzGerald, Derry and Pardo, Bryan},
-  %journal={IEEE/ACM Transactions on Audio, Speech, and Language Processing},
+  journal={IEEE/ACM Transactions on Audio, Speech, and Language Processing},
   title={An overview of lead and accompaniment separation in music},
   year={2018},
   volume={26},
@@ -1328,7 +1328,7 @@ doi = {10.1109/JPROC.2010.2040551},
 }
 
 @article{xumx,
-  %title={All for one and one for all: improving music separation by bridging networks}, 
+  title={All for one and one for all: improving music separation by bridging networks}, 
   author={Ryosuke Sawata and Stefan Uhlich and Shusuke Takahashi and Yuki Mitsufuji},
   year={2021},
   journal={arXiv preprint arXiv:2010.04228},
@@ -1401,7 +1401,7 @@ booktitle = {Proceedings of the 14th International Conference on Digital Audio E
 author = {Simpson, Andrew},
 year = {2015},
 title = {Time-frequency trade-offs for audio source separation with binary masks},
-%journal={arXiv preprint arXiv:1504.07372},
+journal={arXiv preprint arXiv:1504.07372},
 url={https://arxiv.org/abs/1504.07372}
 }
 
@@ -1442,7 +1442,7 @@ author={Fabian-Robert Stöter and Antoine Liutkus and Nobutaka Ito},
   number = {41},
   pages = {1667},
   author = {Fabian-Robert Stöter and Stefan Uhlich and Antoine Liutkus and Yuki Mitsufuji},
-  %title = {Open-Unmix: A reference implementation for music source separation},
+  title = {Open-Unmix: A reference implementation for music source separation},
   journal = {Journal of Open Source Software},
   %url = {https://hal.inria.fr/hal-02293689/document}
 }
@@ -1582,7 +1582,7 @@ doi={10.1016/0165-1684(90)90087-F}
       title={WHAM!: extending speech separation to noisy environments}, 
       author={Gordon Wichern and Joe Antognini and Michael Flynn and Licheng Richard Zhu and Emmett McQuinn and Dwight Crow and Ethan Manilow and Jonathan {Le Roux}},
       year={2019},
-  %journal={arXiv preprint arXiv:1907.01160},
+  journal={arXiv preprint arXiv:1907.01160},
   url={https://arxiv.org/abs/1907.01160},
 }
 
@@ -1672,3 +1672,22 @@ year={2021},
   journal={arXiv preprint arXiv:2111.12203},
   url={https://arxiv.org/abs/2111.12203},
 }
+
+@inproceedings{barkjust2,
+author = {Herrera, Perfecto and Dehamel, Amaury and Gouyon, Fabien},
+year = {2003},
+title = {Automatic labeling of unpitched percussion sounds},
+booktitle = {Proceedings of the 114th Convention of the Audio Engineering Society},
+url = {https://paginas.fe.up.pt/~ee97138/AES114-Herrera2003.pdf}
+}
+
+@article{barkjust1,
+author = {Litvin, Yevgeni and Cohen, Israel},
+year = {2011},
+volume = {65},
+pages = {339--350},
+title = {Single-channel source separation of audio signals using Bark scale wavelet packet decomposition},
+journal = {Journal of Signal Processing Systems},
+doi={10.1007/s11265-010-0510-9},
+}
+
