Remove ibid from report

--- a/latex/report.tex
+++ b/latex/report.tex
@@ -33,7 +33,7 @@
 \renewcommand{\topfraction}{0.85}
 \renewcommand{\textfraction}{0.1}
 \renewcommand{\floatpagefraction}{0.75}
-\usepackage[backend=biber,authordate,annotation]{biblatex-chicago}
+\usepackage[backend=biber,authordate,annotation,ibidtracker=false]{biblatex-chicago}
 \addbibresource{citations.bib}
 \input{variables.tex}
 
