Add sound samples and store presentation pdf

--- a/latex/mila-presentation.tex
+++ b/latex/mila-presentation.tex
@@ -475,4 +475,10 @@
 	\end{quote}
 \end{frame}
 
+\begin{frame}
+	\frametitle{Sound samples}
+	``Winners'' of MDX21 (didn't release their code/data, so they didn't get a prize; proprietary company):
+	\url{https://www.youtube.com/watch?v=fNgIXBErUMI}
+\end{frame}
+
 \end{document}
