Adjust a tiny bit of wording

--- a/latex/ch4.tex
+++ b/latex/ch4.tex
@@ -175,7 +175,7 @@ This section will cover the details of the hyperparameters of the xumx-sliCQ tra
 
 The optimizer used is the Adam optimizer, with an adaptive learning rate scheduler, unchanged from UMX.
 
-\subsubsection{Network architecture and training}
+\subsubsection{Network architecture and training results}
 \label{sec:networktraining}
 
 In this section, we will describe the neural network architectures and training results for both the Bi-LSTM and CDAE architectures of xumx-sliCQ. We will use the torchinfo\footnote{\url{https://github.com/TylerYep/torchinfo}} package to get a count of the total trainable parameters of the neural network. We will show the loss curves of the training process with Tensorboard,\footnote{\url{https://www.tensorflow.org/tensorboard/}} a neural network training visualization tool.
